Fix misalignment of alerts
Add a left padding to all alerts so that they are aligned with the
panels

--- a/app/assets/stylesheets/dashboard/custom-style.scss
+++ b/app/assets/stylesheets/dashboard/custom-style.scss
@@ -529,3 +529,8 @@
 .clear-floats {
   clear: both;
 }
+
+/* Bootstrap overrides */
+.alert {
+  margin-left: 15px;
+}
